/**
 * # Delete Topic
 * Delete an existing topic from the Hedera Consensus Service (HCS).
 *
 * ### Keywords
 * The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
 * "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
 * document are to be interpreted as described in
 * [RFC2119](https://www.ietf.org/rfc/rfc2119) and clarified in
 * [RFC8174](https://www.ietf.org/rfc/rfc8174).
 */
syntax = "proto3";

package proto;

/*
 * Copyright (C) 2018-2024 Hedera Hashgraph, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.consensus">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";

/**
 * Delete a topic.
 *
 * Once deleted, subsequent transactions or queries for that topic SHALL NOT
 * succeed.<br/>
 * If adminKey is set on the topic, this transaction MUST be signed by that
 * key.<br/>
 * If adminKey is not set on the topic, this transaction SHALL fail with a
 * response code of `UNAUTHORIZED`. A topic without an adminKey cannot be
 * deleted (but MAY expire).
 *
 * ### Block Stream Effects
 * None
 */
message ConsensusDeleteTopicTransactionBody {
    /**
     * Topic to be deleted.
     */
    TopicID topicID = 1;
}
